--- a/src/Header.css
+++ b/src/Header.css
@@ -6,13 +6,7 @@
     
     display : inline;
 } */
-.anujimg {
-  max-width: 200px; /* Adjust the value as needed */
-  width: 100%;
-  height: auto; /* Maintain aspect ratio */
-  border-radius: 50%;
-  margin-right: 150px;
-}
+
 
 .n1{
     margin-left: 40px;
@@ -28,12 +22,19 @@
     color: white;
     padding: 20px;
   }
-  
   .anujimg {
     border-radius: 50%;
-    margin-right: 100px;
-   
-  }
+    margin-right: 40px;
+    margin-top: -82px;
+}
+.anujimg {
+    max-width: 200px;
+    width: 100%;
+    height: auto;
+    border-radius: 50%;
+    margin-right: 150px;
+    margin-left: 90px;
+}
   
   .n1 {
     font-size: 24px;
